--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "aws-sdk": "^2.946.0",
     "axios": "^0.21.1",
     "serverless-dynamodb-local": "^0.2.40",
+    "serverless-stack-output": "^0.2.3",
     "source-map-support": "^0.5.19",
     "uuid": "^8.3.2"
   },
